--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,7 +1,7 @@
 jdk:
   - openjdk11
 before_install:
-  - ./custom_setup.sh
+  - ./scripts/prepareJitpackEnvironment.sh
 install:
   - echo "Running a custom install command"
   - ./gradlew clean install -xtest
